[ignore] small optimization: use valueOf instead of calling constructor
svn path=/trunk/eXist/; revision=13144


Former-commit-id: 33b089c762a3df2d52489404ac2b3d6d1058c7f7